adds comment-body

--- a/index.html
+++ b/index.html
@@ -25,9 +25,19 @@
             <!-- follow link -->
             Follow
         </a>
-        <a href="">
+        <a class="more-link" href="">
             ...
         </a>
+    </div>
+
+    <div class="comments">
+        <div class="profile-pic">
+            <!-- profile pic -->
+        </div>  
+        <div class="comment-body">
+            <div class="username">radishmouse</div>
+            1. lorem <br>2. ipsum <br>3. something else
+        </div>
     </div>
     
     <div class="actions">
@@ -38,7 +48,11 @@
         <!-- "chat" button -->
         <i class="far fa-comment"></i>
         <!-- "share" -->
+        <i class="fas fa-external-link-alt"></i>
         <!-- "bookmark" -->
+        <div class="push-right">
+            <i class="far fa-bookmark"></i>
+        </div>
     </div>
     
 
